@@ -228,7 +228,7 @@
 			<dependency>
 				<groupId>org.easymock</groupId>
 				<artifactId>easymockclassextension</artifactId>
-				<version>2.4</version>
+				<version>2.5.2</version>
 			</dependency>
 			<dependency>
 				<groupId>org.mockito</groupId>
